--- a/Эмуляция контроля качества/Эмуляция контроля качества.csproj
+++ b/Эмуляция контроля качества/Эмуляция контроля качества.csproj
@@ -6,4 +6,10 @@
     <RootNamespace>Эмуляция_контроля_качества</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 </Project>
