--- a/Emulation Quality Control/Emulation Quality Control.csproj
+++ b/Emulation Quality Control/Emulation Quality Control.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>Эмуляция_контроля_качества</RootNamespace>
+    <RootNamespace>Emulation_Quality_Control</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
