Разбил на методы

--- a/Emulation Quality Control/Emulation Quality Control.csproj
+++ b/Emulation Quality Control/Emulation Quality Control.csproj
@@ -12,4 +12,8 @@
     </AssemblyAttribute>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
+  </ItemGroup>
+
 </Project>
